perf/security/sds-tests/ingress-sds/workload.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
---
##################################################################################################
# DestinationRule
##################################################################################################
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-reqperconn-policy
spec:
  host: httpbin
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 1
---
